Repository list controller

--- a/Slot4/Hypermedia/Properties/launchSettings.json
+++ b/Slot4/Hypermedia/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     },
     "Hypermedia": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
