--- a/Slot4/ContentNegotiating/Properties/launchSettings.json
+++ b/Slot4/ContentNegotiating/Properties/launchSettings.json
@@ -17,11 +17,11 @@
     },
     "ContentNegotiating": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:28866"
+      "applicationUrl": "http://localhost:28754"
     }
   }
 }
